--- a/sass/layouts/_zenden.scss
+++ b/sass/layouts/_zenden.scss
@@ -116,6 +116,7 @@ article {
   .field-items,
   .field-items div {
     display: inline;
+    margin-right: 4px;
   }
   
   a {
